@@ -1,3 +1,8 @@
+2016-09-21  Edward Jones  <ed.jones@embecosm.com>
+
+	* Driver.cpp: Generate compilation ids for functions as well as
+	modules.
+
 2016-09-19  Edward Jones  <ed.jones@embecosm.com>
 
 	* Driver.cpp: Use -mageec-gcc to replace the original command word
